# Uniconlab-autonomous-wheelchair

./: .dockerignore  .gitignore  README.md
docs/: interfaces.md  (+4 more)
src/static_livox_localization/: CMakeLists.txt  package.xml
src/static_livox_localization/config/: moving_localization.rviz  moving_localization.yaml  static_localization.rviz  static_localization.yaml
src/static_livox_localization/launch/: moving_localization.launch  seed_map.launch  static_localization.launch
src/static_livox_localization/scripts/: auto_initial_pose.py  enable_auto_correction_after_seed.py  localization_state_marker.py  preflight.py  reference_marker.py  replay_metrics.py  report_moving_trial.py  report_static_trial.py  safety_gate.py  tip_guard.py  waypoint_follower.py
src/static_livox_localization/src/: assisted_alignment.cpp  bounded_cloud_preview.cpp  bounded_cloud_preview_node.cpp  map_preview_publisher.cpp  moving_icp_localizer.cpp  moving_tracker.cpp  registration.cpp  rolling_submap.cpp  static_icp_localizer.cpp
src/static_livox_localization/test/: moving_localization_replay.test  test_assisted_alignment.cpp  test_assisted_alignment_surface.py  test_assisted_node_contract.py  test_assisted_rviz_contract.py  test_auto_initial_pose_surface.py  test_bounded_cloud_preview.cpp  test_bounded_preview_surface.py  test_bounded_rviz_surface.py  test_moving_dependencies.py  test_moving_node_contract.py  test_moving_preflight.py  test_moving_surface.py  test_moving_tracker.cpp  test_no_motion_surface.py  test_preflight.py  test_preflight_dependencies.py  test_registration.cpp  test_replay_assisted_contract.py  test_replay_install.py  test_replay_metrics.py  test_report_install.py  test_report_moving_trial.py  test_rolling_submap.cpp  test_rviz_surface.py  test_tip_guard_surface.py  test_waypoint_follower_surface.py
src/static_livox_localization/trials/: auto_init_field_20260721.json  moving_trial_20260719_live.json
src/wheelchair_bringup/: CMakeLists.txt  package.xml
src/wheelchair_bringup/config/: observability.yaml  params.yaml  runtime_modes.yaml
src/wheelchair_bringup/launch/: bringup.launch  hardware_enabled.launch  hardware_shadow.launch  rc_bringup.launch  replay_bringup.launch  sim_bringup.launch
src/wheelchair_bringup/scripts/: incident_recorder.py
src/wheelchair_bringup/tests/: test_full_bringup_static.py  test_incident_recorder.py
src/wheelchair_decision/: CMakeLists.txt  package.xml
src/wheelchair_decision/config/: decision.yaml
src/wheelchair_decision/launch/: decision.launch
src/wheelchair_decision/scripts/: mission_core.py  mission_node.py
src/wheelchair_decision/tests/: test_mission_core.py  test_mission_fsm.py  test_mission_node.py
src/wheelchair_description/: CMakeLists.txt  package.xml
src/wheelchair_description/launch/: display.launch
src/wheelchair_description/tests/: test_dimensions_and_urdf.py  test_sim_sensors.py
src/wheelchair_description/urdf/: dimensions.xacro  wheelchair.urdf.xacro
src/wheelchair_gazebo/: CMakeLists.txt  package.xml
src/wheelchair_gazebo/config/: controllers.yaml  route_truth_outbound.yaml  scenarios.yaml
src/wheelchair_gazebo/launch/: rc_sim.launch  sim.launch  spawn.launch
src/wheelchair_gazebo/scripts/: rc_fault_injector.py  rc_metrics_collector.py  rc_scenario_driver.py  sim_evidence_bridge.py  sim_sensor_canonicalizer.py  simulation_controller_adapter.py
src/wheelchair_gazebo/tests/: test_hanyang_gazebo_model.py  test_rc_fault_injector.py  test_rc_metrics_collector.py  test_rc_scenario_driver.py  test_rc_world_static.py  test_sim_evidence_bridge.py  test_sim_sensor_canonicalizer.py  test_simulation_controller_adapter.py
src/wheelchair_gazebo/worlds/: empty.world  road_free_space.world  sidewalk_obstacles.world  static_dynamic_obstacles.world  wheelchair_rc_scenarios.world
src/wheelchair_hardware/: CMakeLists.txt  package.xml
src/wheelchair_hardware/scripts/: driver_contract.py  hardware_adapter.py
src/wheelchair_hardware/tests/: test_driver_contract.py
src/wheelchair_interfaces/: CMakeLists.txt  package.xml
src/wheelchair_interfaces/action/: ExecuteRoute.action
src/wheelchair_interfaces/msg/: ActiveRoute.msg  CollisionStatus.msg  DriverStatus.msg  GeofenceStatus.msg  LocalizationCandidate.msg  LocalizationStatus.msg  MissionState.msg  MotionIntent.msg  RouteProgress.msg  SafetyReason.msg  SafetySignal.msg  SafetyState.msg  SlopeStatus.msg
src/wheelchair_interfaces/tests/: test_interface_contracts.py
src/wheelchair_navigation/: CMakeLists.txt  package.xml  setup.py
src/wheelchair_navigation/config/: control_monitor.yaml  costmap_common.yaml  dwa_local_planner.yaml  geofence_road_free_space.yaml  geofence_sidewalk.yaml  global_costmap.yaml  hanyang_routes.yaml  local_costmap.yaml  localization_confidence.yaml  localization_confidence_sim.yaml  move_base.yaml  recovery_behaviors.yaml  speed_policy.yaml  waypoints_sidewalk.yaml
src/wheelchair_navigation/launch/: control_monitor.launch  localization.launch  navigation.launch  route_manager.launch
src/wheelchair_navigation/scripts/: control_monitor.py  localization_adapter.py  route_manager.py
src/wheelchair_navigation/tests/: test_control_monitor.py  test_fast_lio_icp_unittest.py  test_fast_lio_launch_binding.py  test_localization_adapter.py  test_navigation_static.py  test_route_manager.py  test_speed_policy.py
src/wheelchair_perception/: CMakeLists.txt  package.xml
src/wheelchair_perception/config/: perception.yaml
src/wheelchair_perception/launch/: perception.launch
src/wheelchair_perception/scripts/: perception_core.py  perception_node.py
src/wheelchair_perception/tests/: test_perception_core.py  test_perception_node.py  test_pointcloud_codec.py
src/wheelchair_route_safety/: CMakeLists.txt  package.xml
src/wheelchair_route_safety/config/: route_safety_sim.yaml
src/wheelchair_route_safety/scripts/: route_safety.py
src/wheelchair_route_safety/tests/: test_route_safety.py
src/wheelchair_safety/: CMakeLists.txt  package.xml
src/wheelchair_safety/config/: collision_policy.yaml  safety_limits.yaml  slope_policy.yaml
(+113 files in other folders)
