<?xml version="1.0"?>
<package format="2">
  <name>static_livox_localization</name>
  <version>0.1.0</version>
  <description>Stationary seeded GICP validation for Livox Mid-360 maps.</description>
  <maintainer email="gpgy2718@gmail.com">박경연</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>std_srvs</depend>
  <test_depend>rostest</test_depend>
</package>
