<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_decision</name>
  <version>0.1.0</version>
  <description>Deterministic fail-closed wheelchair mission orchestration.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>wheelchair_interfaces</depend>
  <depend>wheelchair_navigation</depend>
  <exec_depend>python3-yaml</exec_depend>
  <exec_depend>python3-jsonschema</exec_depend>
  <exec_depend>python3-rospkg</exec_depend>

  <test_depend>python3-yaml</test_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
