<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_description</name>
  <version>0.1.0</version>
  <description>ROS1 Noetic URDF/xacro description for a simulation-only electric wheelchair scaffold.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
