<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_gazebo</name>
  <version>0.1.0</version>
  <description>Gazebo Classic 11 worlds and spawn launch files for the ROS1 Noetic wheelchair scaffold.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>wheelchair_description</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
