<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_interfaces</name>
  <version>0.1.0</version>
  <description>Frozen ROS 1 interface ABI for the autonomous wheelchair.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
