<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_perception</name>
  <version>0.1.0</version>
  <description>Deterministic canonical Livox processing for navigation evidence.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
