<?xml version="1.0"?>
<package format="2">
  <name>wheelchair_safety</name>
  <version>0.1.0</version>
  <description>ROS1 Python safety gate and mode policy nodes for the wheelchair scaffold.</description>
  <maintainer email="maintainer@example.com">GJC Scaffold Maintainer</maintainer>
  <license>GPL-2.0-only</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
